--- a/data/en/footer.yaml
+++ b/data/en/footer.yaml
@@ -1,7 +1,7 @@
 logo_image: inline-svg
 menuitems:
   - title: Our Mission
-    link:  /#mission
+    link:  /#
   #- title: Elements
   #  link:  /elements/
   #- title: Privacy policy
@@ -23,8 +23,8 @@ socials:
     logo_image: /img/facebook.svg
   - title: Instagram
     link: https://www.instagram.com/waterwaycleanups
-    logo_image: /img/instagram.svg      
+    logo_image: /img/instagram.svg
   - title: LinkedIn
     link: https://www.linkedin.com/company/waterwaycleanups
-    logo_image: /uploads/waterway-cleanups/linkedin.svg   
+    logo_image: /uploads/waterway-cleanups/linkedin.svg
 footer_text: Copyright © 2025. Waterway Cleanups. All rights reserved.
