Renamed meetups to cleanups; fixed accokeek tag

--- a/data/en/footer.yaml
+++ b/data/en/footer.yaml
@@ -6,8 +6,8 @@ menuitems:
   #  link:  /elements/
   #- title: Privacy policy
   #  link:  /privacy-policy/
-  - title: Upcoming Meetups
-    link:  /#meetups
+  - title: Upcoming Cleanups
+    link:  /#cleanups
   - title: Projects
     link:  /#projects
   - title: Sponsors
