added baseurl to config

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://www.hugobricks.preview.usecue.com
+baseURL: https://waterwaycleanups.org/
 theme: hugobricks
 defaultContentLanguage: en
 assetDir: static
