--- a/data/en/footer.yaml
+++ b/data/en/footer.yaml
@@ -27,4 +27,4 @@ socials:
   - title: LinkedIn
     link: https://www.linkedin.com/company/waterwaycleanups
     logo_image: /uploads/waterway-cleanups/linkedin.svg
-footer_text: Copyright © 2025. Waterway Cleanups. All rights reserved.
+footer_text: Copyright © 2025. Waterway Cleanups. All rights reserved. Website by <a href="mailto:trey@seismiq.us" target="_blank" title="SeismIQ">SeismIQ</a>.
