--- a/data/en/header.yaml
+++ b/data/en/header.yaml
@@ -62,4 +62,4 @@ cta:
   active: true
   title: Donate
   link: https://collect.bankingcrowded.com/collection/fbacead4-04ff-406a-b1fe-8cea2af39eb3
-preheader: Upcoming Cleanup - Saturday, May 10th at 12pm
+preheader: Upcoming Cleanup - Saturday, June th at 9am
