Feature/7 create projects page for june grant (#19)
* #8 - Adding correct favicon declaration for support across different platforms -- fixing SEO Description with proper declaration and fixing weird blank space issue-would cause issues for SEO

* projects page, seo, style fixes, adding tailwind, adding daisyui, updating readme, new bricks.

* adding tailwind generated files to .gitignore

* Fixing text alignment for sponsors

--- a/data/en/header.yaml
+++ b/data/en/header.yaml
@@ -5,57 +5,10 @@ mobile_view_width: 1100
 menuitems:
   - title: Our Mission
     link: /#
-    #items:
-    #  - title: Title
-    #    link: /header-with-title/
-    #  - title: Content block
-    #    link: /header-with-content/
-    #  - title: Dark preheader
-    #    link: /header-dark/
-    # - title: Dark nav
-    #    link: /header-darker/
-    #  - title: Transparent nav
-    #    link: /header-transparent/
   - title: Upcoming Cleanups
     link: /#cleanups
-    #items:
-    #  - title: About
-    #    link: /about/
-    #  - title: Basic page 1
-    #    link: /basic/
-    #  - title: Basic page 2
-    #    link: /basic2/
-    #  - title: Images
-    #    link: /images/
-    #  - title: Our team
-    #    link: /team/
-    #  - title: Services
-    #    link: /services/
-    #  - title: Blog
-    #    link: /blog/
-    #  - title: Contact us
-    #    link: /contact/
-    #  - title: F.A.Q.
-    #    link: /faq/
-    #  - title: Webshop
-    #    link: /webshop/
-    #  - title: 404 Page
-    #    link: /404.html
-  #- title: Elements
-  #  link: /elements/
-  #- title: Docs
-  #  link: /docs/
   - title: Projects
-    link: /#projects
-    #items:
-    #  - title: Paragliding
-    #    link: /demo-paragliding/
-    #  - title: Hiking
-    #    link: /demo-hiking/
-    #  - title: Poulterer
-    #    link: /demo-poulterer/
-    #  - title: POS software
-    #    link: /demo-pos/
+    link: /projects/
   - title: Sponsors
     link: /#sponsors
   - title: Volunteer
