--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,18 @@ jobs:
           aws-region: us-east-1
           role-session-name: github-actions
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build assets (Tailwind CSS and Webpack)
+        run: npm run build:css && npm run build:assets
+
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
