--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build assets (Tailwind CSS and Webpack)
-        run: npm run build:css && npm run build:assets
+      - name: Build assets
+        run: npm run build:assets
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
