--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "Waterways Cleanup Project",
   "scripts": {
     "dev": "concurrently \"hugo server\" \"npm run watch:assets\" \"npm run watch:css\"",
-    "build": "npm run clean && npm run build:css && npm run build:assets && npm run minify:css && HUGO_ENV=production hugo --minify",
+    "build": "npm run build:css && npm run build:assets && hugo --minify",
     "build:assets": "webpack --mode production",
-    "build:css": "tailwindcss -i ./static/css/src/tailwind.css -o ./static/css/tailwind-output.min.css --minify",
+    "build:css": "tailwindcss -i ./static/css/src/tailwind.css -o ./static/css/tailwind-output.css --minify",
     "watch:assets": "webpack --watch --mode development",
     "watch:css": "tailwindcss -i ./static/css/src/tailwind.css -o ./static/css/tailwind-output.css --watch",
-    "clean": "rm -f static/css/tailwind-output.css static/css/tailwind-output.min.css static/js/main-bundle.js",
-    "start": "npm run build && hugo server",
-    "minify:css": "./node_modules/.bin/postcss ./static/css/*.css --use cssnano -d ./static/css/ --no-map"
+    "clean": "rm -f static/css/tailwind-output.css static/js/main-bundle.js",
+    "start": "npm run build && hugo server"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.8",
@@ -29,11 +28,9 @@
     "babel-loader": "^10.0.0",
     "concurrently": "^8.2.2",
     "css-loader": "^6.10.0",
-    "cssnano": "^7.0.7",
     "daisyui": "^5.0.43",
     "mini-css-extract-plugin": "^2.8.1",
     "postcss": "^8.4.38",
-    "postcss-cli": "^11.0.1",
     "postcss-loader": "^8.1.1",
     "style-loader": "^3.3.4",
     "tailwindcss": "^4.1.8",
