--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,16 @@ lambda.zip
 # tailwindcss
 static/css/tailwind-output.css
 static/js/tailwind-output-bundle.js
+*-bundle.js
+
+# minified files
+*.min.css
+
+# scripts
+scripts/
+
+#maps
+*.map
+
+# chunks
+static/js/*-chunk*.js
