--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,41 @@ jobs:
           aws-region: us-east-1
           role-session-name: github-actions
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: "1.5.7"
+
+      - name: Create Terraform state resources
+        if: github.ref == 'refs/heads/main'
+        run: |
+          cd terraform
+          # Temporarily move backend.tf to disable it
+          if [ -f "backend.tf" ]; then
+            mv backend.tf backend.tf.bak
+          fi
+          
+          # Initialize without backend and create state resources
+          terraform init
+          terraform apply -auto-approve -target=aws_s3_bucket.terraform_state -target=aws_s3_bucket_versioning.terraform_state_versioning -target=aws_s3_bucket_server_side_encryption_configuration.terraform_state_encryption -target=aws_s3_bucket_public_access_block.terraform_state_public_access_block -target=aws_dynamodb_table.terraform_locks
+          
+          # Restore backend.tf
+          if [ -f "backend.tf.bak" ]; then
+            mv backend.tf.bak backend.tf
+          fi
+      
+      - name: Terraform Init with S3 Backend
+        if: github.ref == 'refs/heads/main'
+        run: |
+          cd terraform
+          terraform init -force-copy
+        
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/main'
+        run: |
+          cd terraform
+          terraform apply -auto-approve
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
