--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "npm run build && hugo server"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.826.0",
     "@tailwindcss/cli": "^4.1.8",
     "@tailwindcss/postcss": "^4.1.8",
     "lineicons-react": "^2.0.0",
