--- a/.github/workflows/deploy-sesv2-admin.yml
+++ b/.github/workflows/deploy-sesv2-admin.yml
@@ -1,4 +1,4 @@
-name: Deploy SESv2 Admin Application
+name: Deploy SESv2 Admin App
 
 on:
   push:
@@ -11,6 +11,9 @@ on:
       - main
     paths:
       - 'sesv2-admin/**'
+      
+  # Allow manual triggering
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -18,53 +21,47 @@ jobs:
     permissions:
       id-token: write
       contents: read
-
+    
+    defaults:
+      run:
+        working-directory: ./sesv2-admin
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: arn:aws:iam::767072126027:role/github-actions-oidc
-          aws-region: us-east-1
-          role-session-name: github-actions-sesv2-admin
-          
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: "1.5.7"
-          
-      - name: Terraform Init (sesv2-admin)
-        if: github.ref == 'refs/heads/main'
-        run: |
-          cd sesv2-admin/terraform
-          terraform init
-
-      - name: Setup Node.js
+      
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: sesv2-admin/package-lock.json
-
+      
       - name: Install dependencies
-        run: cd sesv2-admin && npm ci
-
+        run: npm ci
+      
       - name: Build application
-        run: cd sesv2-admin && npm run build
-
+        run: npm run build
+        env:
+          CI: false # Prevents treating warnings as errors
+      
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::767072126027:role/github-actions-oidc
+          aws-region: us-east-1
+          role-session-name: github-actions
+      
       - name: Deploy to S3
         if: github.ref == 'refs/heads/main'
         run: |
-          # Deploy to a subdirectory in the main bucket
-          aws s3 sync sesv2-admin/build/ s3://${{ secrets.S3_BUCKET_NAME }}/sesv2-admin/
-
-      - name: Invalidate CloudFront Cache
+          aws s3 sync build/ s3://waterwaycleanups-sesv2-admin/ --delete
+      
+      - name: Invalidate CloudFront cache
         if: github.ref == 'refs/heads/main'
         run: |
-          # Only invalidate the specific path
-          aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/sesv2-admin/*"
+          CLOUDFRONT_DISTRIBUTION_ID=$(aws cloudfront list-distributions --query "DistributionList.Items[?Aliases.Items[?contains(@, 'waterwaycleanups.org')]].Id" --output text)
+          aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths "/sesv2-admin/*"
       
       - name: Slack Notification
         uses: slackapi/slack-github-action@v2.1.0
@@ -72,9 +69,9 @@ jobs:
           webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
           webhook-type: incoming-webhook
           payload: |
-            text: "*SESv2 Admin Deploy result*: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+            text: "*SESv2 Admin deploy result*: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
             blocks:
               - type: "section"
                 text:
                   type: "mrkdwn"
-                  text: "SESv2 Admin Deploy result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                  text: "SESv2 Admin deploy result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
