--- a/sesv2-admin/package.json
+++ b/sesv2-admin/package.json
@@ -2,6 +2,7 @@
   "name": "sesv2-admin",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/sesv2-admin/",
   "dependencies": {
     "@aws-amplify/ui-react": "^6.11.2",
     "@aws-sdk/client-cognito-identity-provider": "^3.826.0",
