--- a/sesv2-admin/package.json
+++ b/sesv2-admin/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:ci": "node ci-build.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
