--- a/.github/workflows/deploy-sesv2-admin.yml
+++ b/.github/workflows/deploy-sesv2-admin.yml
@@ -6,11 +6,13 @@ on:
       - main
     paths:
       - 'sesv2-admin/**'
+      - '.github/workflows/deploy-sesv2-admin.yml'
   pull_request:
     branches:
       - main
     paths:
       - 'sesv2-admin/**'
+      - '.github/workflows/deploy-sesv2-admin.yml'
       
   # Allow manual triggering
   workflow_dispatch:
@@ -90,7 +92,20 @@ jobs:
         env:
           CI: false # Prevents treating warnings as errors
           PUBLIC_URL: https://sesv2-admin.waterwaycleanups.org # Set the correct public URL
-
+      
+      # Deploy to S3 bucket (dynamically get the bucket name from Terraform outputs)
+      - name: Get S3 bucket name from Terraform outputs
+        id: tf-outputs
+        working-directory: ./sesv2-admin/terraform
+        run: |
+          # Parse bucket name, handling potential debug output format
+          BUCKET_NAME=$(terraform output -raw sesv2_admin_bucket_name)
+          echo "bucket_name=$BUCKET_NAME" >> $GITHUB_OUTPUT
+          
+          # Parse distribution ID, handling potential debug output format
+          DISTRIBUTION_ID=$(terraform output -raw cloudfront_distribution_id)
+          echo "distribution_id=$DISTRIBUTION_ID" >> $GITHUB_OUTPUT
+      
       - name: Deploy to S3
         if: github.ref == 'refs/heads/main'
         working-directory: ./sesv2-admin
