--- a/.github/workflows/deploy-sesv2-admin.yml
+++ b/.github/workflows/deploy-sesv2-admin.yml
@@ -98,11 +98,8 @@ jobs:
         id: tf-outputs
         working-directory: ./sesv2-admin/terraform
         run: |
-          BUCKET_NAME=$(terraform output -raw sesv2_admin_bucket_name)
-          echo "bucket_name=$BUCKET_NAME" >> "$GITHUB_OUTPUT"
-          
-          DISTRIBUTION_ID=$(terraform output -raw cloudfront_distribution_id)
-          echo "distribution_id=$DISTRIBUTION_ID" >> "$GITHUB_OUTPUT"
+          echo "bucket_name=$(terraform output -raw sesv2_admin_bucket_name)" >> $GITHUB_OUTPUT         
+          echo "distribution_id=$(terraform output -raw cloudfront_distribution_id)" >> $GITHUB_OUTPUT
       
       - name: Deploy to S3
         if: github.ref == 'refs/heads/main'
