Fix CSS build inconsistency between development and production
Remove dual CSS build paths that caused inconsistent results between
development and production environments. The build:css command using
Tailwind CLI generated different CSS than the webpack build:assets
command due to different content scanning and processing pipelines.

Changes:
- Remove build:css and watch:css npm scripts
- Update GitHub Actions deployment to use only build:assets
- Simplify dev and build scripts to use consistent webpack pipeline
- Update documentation (README.md)
- Update CSS file to match production webpack output

This eliminates race conditions from webpack's file copy logic and
ensures developers see exactly what production will generate.

If CSS-only builds are needed in the future, they should be implemented
using webpack configuration rather than separate Tailwind CLI commands.

--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "description": "Waterways Cleanup Project",
   "scripts": {
-    "dev": "concurrently \"hugo server\" \"npm run watch:assets\" \"npm run watch:css\"",
-    "build": "npm run build:css && npm run build:assets && hugo --minify",
+    "dev": "concurrently \"hugo server\" \"npm run watch:assets\"",
+    "build": "npm run build:assets && hugo --minify",
     "build:assets": "webpack --mode production",
-    "build:css": "tailwindcss -i ./static/css/src/tailwind.css -o ./static/css/tailwind-output.css --minify",
     "watch:assets": "webpack --watch --mode development",
-    "watch:css": "tailwindcss -i ./static/css/src/tailwind.css -o ./static/css/tailwind-output.css --watch",
     "clean": "rm -f static/css/tailwind-output.css static/js/main-bundle.js",
     "start": "npm run build && hugo server"
   },
