Exclude built assets from version control
Remove webpack-generated bundle files, map files, and license files from git tracking to prevent merge conflicts and accidental commits. These files are regenerated by the build:assets command.

Files excluded:
- CSS bundles: tailwind-output.css, tailwind-output.min.css
- JS bundles: date-bundle.js, parallax-bundle.js, tailwind-output-bundle.js
- Source maps: *.map files
- License files: *.LICENSE.txt files

Updated .gitignore with patterns to catch all generated assets and prevent future commits.

--- a/.gitignore
+++ b/.gitignore
@@ -43,9 +43,15 @@ temp/
 .terraform*
 lambda.zip
 
-# tailwindcss
+# Built assets
 static/css/tailwind-output.css
+static/css/tailwind-output.css.map
+static/css/tailwind-output.min.css
 static/js/tailwind-output-bundle.js
+static/js/date-bundle.js
+static/js/parallax-bundle.js
+*.map
+*.LICENSE.txt
 
 terraform.tfstate*
 
