--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:assets": "webpack --mode production",
     "watch:assets": "webpack --watch --mode development",
     "clean": "rm -f static/css/tailwind-output.css static/js/main-bundle.js",
-    "start": "npm run build && hugo server"
+    "start": "npm run build && hugo server",
+    "build-merch": "npx esbuild merch-page/index.tsx --bundle --outfile=static/merch-page/app.js --format=esm --platform=browser --target=es2020 --jsx=automatic --jsx-import-source=react --external:react --external:react-dom/client --external:react/jsx-runtime --external:@stripe/stripe-js --minify"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.826.0",
@@ -35,5 +36,9 @@
     "tailwindcss": "^4.1.8",
     "webpack": "^5.99.7",
     "webpack-cli": "^6.0.1"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
 }
