--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "watch:assets": "webpack --watch --mode development",
     "clean": "rm -f static/css/tailwind-output.css static/js/main-bundle.js",
     "start": "npm run build && hugo server",
-    "build-merch": "npx esbuild merch-page/index.tsx --bundle --outfile=static/merch-page/app.js --format=esm --platform=browser --target=es2020 --jsx=automatic --jsx-import-source=react --external:react --external:react-dom/client --external:react/jsx-runtime --external:@stripe/stripe-js --minify"
+    "build-merch": "npx esbuild merch-page/index.tsx --bundle --outfile=static/merch-page/app.js --format=esm --platform=browser --target=es2020 --jsx=automatic --jsx-import-source=react --external:react --external:react-dom/client --external:react/jsx-runtime --external:@stripe/stripe-js --minify",
+    "sync-products": "node scripts/sync-products.js",
+    "sync-products:dry-run": "node scripts/sync-products.js --dry-run",
+    "sync-products:verbose": "node scripts/sync-products.js --verbose"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.826.0",
@@ -29,9 +32,11 @@
     "concurrently": "^8.2.2",
     "css-loader": "^6.10.0",
     "daisyui": "^5.0.43",
+    "dotenv": "^17.2.2",
     "mini-css-extract-plugin": "^2.8.1",
     "postcss": "^8.4.38",
     "postcss-loader": "^8.1.1",
+    "stripe": "^18.5.0",
     "style-loader": "^3.3.4",
     "tailwindcss": "^4.1.8",
     "webpack": "^5.99.7",
